added main page controller
