# swagger.json
@@ -340,10 +340,41 @@
 				}
 			}
 		},
+		"/recipes/main-page": {
+			"get": {
+				"tags": ["Recipes"],
+				"summary": "return object {category: [array of 3 random recipes]}",
+				"parameters": [],
+				"responses": {
+					"200": {
+						"description": "Successful operation",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/RecipesMainPage"
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found",
+						"content": {}
+					},
+					"500": {
+						"description": "Server error",
+						"content": {}
+					}
+				}
+			}
+		},
 		"/popular-recipes": {
 			"get": {
 				"tags": ["Popular recipes"],
-				"summary": "return a 5 items of popular recipes",
+				"summary": "return the 5 most popular recipes",
 				"security": [{ "Bearer": [] }],
 				"responses": {
 					"200": {
@@ -964,6 +995,185 @@
 						"isFavorite": false
 					}
 				]
+			},
+			"RecipesMainPage": {
+				"type": "object",
+				"properties": {
+					"category": {
+						"type": "array",
+						"items": {
+							"type": "object",
+							"required": ["drink", "category", "glass", "ingredients"],
+							"properties": {
+								"_id": {
+									"type": "string",
+									"description": "Recipe's id",
+									"example": "639b6de9ff77d221f190c570"
+								},
+								"drink": {
+									"type": "string",
+									"description": "Recipe's name",
+									"example": "Dragonfly"
+								},
+								"description": {
+									"type": "string",
+									"description": "Description of coctail",
+									"example": "The porn star martini is a passion-fruit-flavoured cocktail made with vanilla-flavoured vodka, Passoã, passion fruit juice, and lime juice. It is traditionally accompanied by a chilled shot glass of prosecco. "
+								},
+								"category": {
+									"type": "string",
+									"description": "Category",
+									"example": "Coffee / Tea"
+								},
+								"glass": {
+									"type": "string",
+									"description": "Type of glass",
+									"example": "Irish coffee cup"
+								},
+								"instructions": {
+									"type": "string",
+									"description": "instructions how prepare coctail",
+									"example": "Heat the coffee, whiskey and sugar; do not boil. Pour into glass and t…"
+								},
+								"drinkThumb": {
+									"type": "string",
+									"description": "image of coctail",
+									"example": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689167155/cocktails…"
+								},
+								"ingredients": {
+									"type": "array",
+									"items": {
+										"type": "object",
+										"required": ["title", "measure"],
+										"properties": {
+											"_id": {
+												"type": "string",
+												"description": "Ingredient's id",
+												"example": "64e9fa8d3c1392483f04d966"
+											},
+											"title": {
+												"type": "string",
+												"description": "Ingredient's name",
+												"example": "Highball glass"
+											},
+											"ingredientThumb": {
+												"type": "string",
+												"description": "Image of ingredient",
+												"example": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Sweet%20Vermouth.png"
+											},
+											"thumb-medium": {
+												"type": "string",
+												"description": "Image of ingredient medium",
+												"example": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Sweet%20Vermouth-Medium.png"
+											},
+											"thumb-small": {
+												"type": "string",
+												"description": "Image of ingredient small",
+												"example": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Sweet%20Vermouth-Small.png"
+											},
+											"measure": {
+												"type": "string",
+												"description": "Quantity",
+												"example": "1 1/2 oz"
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+					
+				},
+				
+				"example": {
+					"Cocktail": [
+						{
+							"drink": "Bora Bora",
+							"category": "Cocktail",
+							"glass": "Highball glass",
+							"instructions": "Prepare in a blender or shaker, serve in a highball glass on the rocks. Garnish with 1 slice of pineapple and one cherry.",
+							"drinkThumb": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689167143/cocktails-v1/drinks/Bora_Bora.jpg",
+							"ingredients": [
+								{
+									"title": "Pineapple juice",
+									"measure": "10 cl ",
+									"ingredientThumb": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Pineapple%20juice.png",
+									"thumb-medium": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Pineapple%20juice-Medium.png",
+									"thumb-small": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Pineapple%20juice-Small.png"
+								},
+								{
+									"title": "Passion fruit juice",
+									"measure": "6 cl "
+								},
+								{
+									"title": "Lemon juice",
+									"measure": "1 cl ",
+									"ingredientThumb": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Lemon%20juice.png",
+									"thumb-medium": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Lemon%20juice-Medium.png",
+									"thumb-small": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Lemon%20juice-Small.png"
+								},
+								{
+									"title": "Grenadine",
+									"measure": "1 cl ",
+									"ingredientThumb": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169605/cocktails-v1/ingredient/Grenadine.png",
+									"thumb-medium": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169605/cocktails-v1/ingredient/Grenadine-Medium.png",
+									"thumb-small": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169605/cocktails-v1/ingredient/Grenadine-Small.png"
+								}
+							]
+						},
+						{
+							"drink": "Bijou",
+							"category": "Cocktail",
+							"glass": "Cocktail glass",
+							"instructions": "Stir in mixing glass with ice and strain\r\n",
+							"drinkThumb": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689167149/cocktails-v1/drinks/Bijou.jpg",
+							"ingredients": [
+								{
+									"title": "Orange Bitters",
+									"measure": "1 dash"
+								},
+								{
+									"title": "Green Chartreuse",
+									"measure": "1 oz"
+								},
+								{
+									"title": "Gin",
+									"measure": "1 oz",
+									"ingredientThumb": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169605/cocktails-v1/ingredient/Gin.png",
+									"thumb-medium": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169605/cocktails-v1/ingredient/Gin-Medium.png",
+									"thumb-small": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169605/cocktails-v1/ingredient/Gin-Small.png"
+								},
+								{
+									"title": "Sweet Vermouth",
+									"measure": "1 oz",
+									"ingredientThumb": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Sweet%20Vermouth.png",
+									"thumb-medium": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Sweet%20Vermouth-Medium.png",
+									"thumb-small": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169611/cocktails-v1/ingredient/Sweet%20Vermouth-Small.png"
+								}
+							]
+						},
+						{
+							"drink": "Paloma",
+							"category": "Cocktail",
+							"glass": "Collins glass",
+							"instructions": "Stir together and serve over ice.",
+							"drinkThumb": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689167160/cocktails-v1/drinks/Paloma.jpg",
+							"ingredients": [
+								{
+									"title": "Grape Soda",
+									"measure": "3 oz"
+								},
+								{
+									"title": "Tequila",
+									"measure": "1 1/2 oz",
+									"ingredientThumb": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169616/cocktails-v1/ingredient/Tequila.png",
+									"thumb-medium": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169616/cocktails-v1/ingredient/Tequila-Medium.png",
+									"thumb-small": "http://res.cloudinary.com/dec1shvoo/image/upload/v1689169616/cocktails-v1/ingredient/Tequila-Small.png"
+								}
+							]
+						}
+					]
+				}
 			},
 			"Favorite": {
 				"type": "object",
